# sia_vbd

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
migrations/: 20250124121500_create_tables.sql  20250227150500_gc.sql  20250307153500_alter_config.sql
protos/: common.proto  frame.proto  volume.proto  wal.proto
src/: cache.rs  connection.rs  hash.rs  inventory.rs  io.rs  lib.rs  main.rs  protos.rs
src/inventory/: chunk.rs  mod.rs  syncer.rs
src/nbd/: block_device.rs  connection.rs  handler.rs  handshake.rs  mod.rs  transmission.rs
src/nbd/transmission/: fragment.rs  mod.rs  read.rs  reply.rs  request.rs
src/nbd/vbd/: dedup.rs  dummy.rs  mem.rs  mod.rs
src/repository/: fs.rs  mod.rs  protos.rs  renterd.rs
src/serde/: encoded.rs  framed.rs  mod.rs  protos.rs
src/vbd/: inventory.rs  mod.rs  nbd_device.rs  wal.rs
src/vbd/wal/: mod.rs  protos.rs  reader.rs  writer.rs
src/wal/: man.rs  mod.rs  protos.rs  reader.rs  writer.rs
