[package]
name = "sia_vbd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-scoped = { version = "0.9", features = ["use-tokio"] }
async-trait = "0.1"
bitflags = "2.6"
blake3 = "1.5"
bytes = "1"
bytesize = "1.3"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
compact_bytes = "0.1"
derivative = "2.2"
futures = "0.3"
num_enum = "0.7"
once_cell = "1.20"
prost = "0.13"
rangemap = "1.5"
tenthash = "0.4"
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "compat"] }
twox-hash = { version = "2.1", features = ["xxhash3_128"] }
uuid = { version = "1.11", features = ["v7"] }
url = "2.5"

[build-dependencies]
anyhow = "1"
prost-build = "0.13"
protoc-bin-vendored = "3.1"