[package]
name = "sia_vbd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
arc-swap = "1.7"
async-compression = { version = "0.4", default-features = false, features = ["futures-io", "zstd"] }
async-scoped = { version = "0.9", features = ["use-tokio"] }
async-tempfile = { version = "0.6", features = ["uuid"] }
async-trait = "0.1"
bitflags = "2.6"
blake3 = "1.5"
bytes = "1"
bytesize = "1.3"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
compact_bytes = "0.1"
crc = "3.2"
derivative = "2.2"
either = "1"
futures = "0.3"
num_enum = "0.7"
once_cell = "1.20"
pin-project-lite = "0.2"
prost = "0.13"
rangemap = "1.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
tenthash = "0.4"
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twox-hash = { version = "2.1", features = ["xxhash3_128"] }
uuid = { version = "1.11", features = ["v7"] }
url = "2.5"

[build-dependencies]
anyhow = "1"
prost-build = "0.13"
protoc-bin-vendored = "3.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
tokio = { version = "1.41", features = ["full"] }